--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --watch backend --ext ts --exec \"npx ts-node backend/server.ts\"",
+    "build": "tsc",
+    "start": "node backend/server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "mongoose": "^8.19.2",
     "node-cron": "^4.2.1",
+    "nodemon": "^3.1.10",
     "puppeteer": "^24.27.0",
     "rss-parser": "^3.13.0"
   },
